@@ -249,62 +249,38 @@ function handleClear(chan, user) {
     chan.sendAll("clearchat");
 }
 
-var user_input_re = /^(-[img]+\s+)/i
+/*
+    /clean and /cleantitle contributed by http://github.com/unbibium.
+    Modifications by Calvin Montgomery
+*/
 
-function user_input_regexp(target) {
-    var m = target.match(user_input_re);
+function generateTargetRegex(target) {
+    const flagsre = /^(-[img]+\s+)/i
+    var m = target.match(flagsre);
     var flags = "";
     if (m) {
         flags = m[0].slice(1,-1);
-        target = target.replace(user_input_re, "");
+        target = target.replace(flagsre, "");
     }
     return new RegExp(target, flags);
 }
 
 function handleClean(chan, user, target) {
-    // you can use regexps, in case someone tries
-    // to fool you with cyrillic or something.
-    target = user_input_regexp(target);
-    cleanPlaylist(chan, user, function(item) {
+    if (!chan.hasPermission(user, "playlistdelete"))
+        return;
+    target = generateTargetRegex(target);
+    chan.playlist.clean(function (item) {
         return target.test(item.queueby);
     });
 }
 
 function handleCleanTitle(chan, user, target) {
-    target = user_input_regexp(target);
-    cleanPlaylist(chan, user, function(item) {
+    if (!chan.hasPermission(user, "playlistdelete"))
+        return;
+    target = generateTargetRegex(target);
+    chan.playlist.clean(function (item) {
         return target.exec(item.media.title) !== null;
     });
-}
-
-/**
-Remove all videos by a particular user.
-*/
-function cleanPlaylist(chan, user, filter) {
-    if(!chan.hasPermission(user, "playlistdelete")) { 
-        return;
-    }
-    // local variables for deleteNext() callback
-    var pl = chan.playlist;
-    var count = 0;
-    var matches = pl.items.findAll(filter);
-    var deleteNext;
-    deleteNext = function() {
-        if (count < matches.length) {
-            var uid=matches[count].uid;
-            count += 1
-            chan.sendAll("delete", {
-                uid: uid
-            });
-            pl.remove(uid, deleteNext);
-        } else {
-            // refresh playlist only once, at the end
-            chan.broadcastPlaylistMeta();
-        }
-    }
-    // start initial callback
-    deleteNext();
-    return;
 }
 
 exports.handle = handle;
