@@ -563,4 +563,31 @@ Playlist.prototype._leadLoop = function() {
     }
 }
 
+/*
+    Delete items from the playlist for which filter(item) returns
+    a truthy value
+
+    based on code contributed by http://github.com/unbibium
+*/
+Playlist.prototype.clean = function (filter) {
+    var self = this;
+    var matches = self.items.findAll(filter);
+    var count = 0;
+    var deleteNext = function () {
+        if (count < matches.length) {
+            var uid = matches[count].uid;
+            count++;
+            self.channel.sendAll("delete", {
+                uid: uid
+            });
+            self.remove(uid, deleteNext);
+        } else {
+            // refresh meta only once, at the end
+            self.channel.broadcastPlaylistMeta();
+        }
+    };
+    // start initial callback
+    deleteNext();
+};
+
 module.exports = Playlist;
