@@ -1,3 +1,7 @@
+Sat Sep 21 00:08 2013 CDT
+    * lib/playlist.js: Make .clean(filter) an instance method
+    * lib/chatcommand.js: Make a few minor changes to unbibium's /clean
+
 Wed Sep 18 18:26 2013 CDT
     * lib/user.js: Change channel checks to include checking for whether
       the channel is dead
